@@ -1,5 +1,7 @@
 10 February 2012: Wouter
 	- Slightly smaller critical region in one case in infra cache.
+	- Fix timeouts to keep track of query type, A, AAAA and other, if
+	  another has caused timeout blacklist, different type can still probe.
 
 9 February 2012: Wouter
 	- Fix AHX_BROKEN_MEMCMP for autoheader mess up of #undef in config.h.
